# ds-rpc-01

./: .gitignore  README.md  pyproject.toml  requirements.txt  ~$allenge1-poe.docx  ~$allenge1.docx  ~$atGPT_project.docx
app/: config.py  deps.py  index.html  main.py  requirements.txt  style.css
app/schemas/: admin.py  chat.py  schemas.py
app/services/: document_loader.py  rag_pipeline.py  rag_service.py  vector_store.py
app/static/: script.js
app/templates/: index.html
app/utils/: audit.py  rbac.py  security.py  utils.py
chroma/0cc38fad-0f76-4d75-87e6-0def3636053c/: index_metadata.pickle
static/: script.js  style.css
templates/: index.html  index_old.html
